2002-05-22  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-reader.c: use yelp-db2html again.

	* src/yelp-db2html.c: use #define for stylesheet location instead
	  of creating a string with it.

	* src/Makefile.am (yelp_SOURCES): don't include yelp-db2html.

	* src/yelp-reader.c (reader_db_start): 
	- try to do the docbook-stuff here instead.

	* src/yelp-view-toc.c (toc_page_end): updated footer some.

2002-05-22  Richard Hult  <rhult@codefactory.se>

	* src/yelp-view-toc.c:
	(toc_man_emit): free return from yelp_uri_to_string.

	* src/yelp-util.c (yelp_util_compose_path_url): free path

	* src/yelp-man.c (yelp_man_init): free manpathes

2002-05-22  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-db2html.c: 
	- cleaning up
	- made to use YelpURI instead of copying parts from it
	- plugged leaks.

	* src/test-reader.c (main): create reader without an argument.
	* src/yelp-view-content.c (content_init): same

	* src/yelp-reader.c: always be async, don't be optional.

	* src/yelp-view-toc.c (toc_page_end): added a space, thanks rhult.

	* src/yelp-window.c (window_about_cb): 
	- fixed copyright notice in about dialog. Thanks menthos.

	* src/test-reader.c:
	(main): call yelp_reader_new with TRUE for async.
	(data_cb): swapped buffer and len arguments.

2002-05-21  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-reader.c:
	(reader_db_write): don't return -1
	(reader_db_close): same.

	* Release 0.8

	* NEWS: updated for 0.8

	* configure.in: bumped version to 0.8

	* src/yelp-reader.c: fixed compile warning.

	* src/yelp-uri.c: fixed so that external links are working too.

	* src/yelp-view-toc.c: implemented jimmac's mockups.

	* src/yelp-uri.c: added support for file:

	* src/Makefile.am (INCLUDES): added IMAGEDIR

	* data/images/*: new files

	* data/Makefile.am: new file

	* configure.in: 
	- added data/Makefile, data/images/Makefile to AC_OUTPUT.

	* Makefile.am (SUBDIRS): added data

2002-05-20  Mikael Hallendal  <micke@codefactory.se>
